--- a/cms-sekolah-backend/package.json
+++ b/cms-sekolah-backend/package.json
@@ -21,5 +21,8 @@
     "multer": "^2.0.2",
     "mysql2": "^3.15.3",
     "nodemon": "^3.1.11"
+  },
+  "devDependencies": {
+    "@ljharb/tsconfig": "^0.3.2"
   }
 }
